cmake_minimum_required(VERSION 3.17)
project(lab03)

set(CMAKE_CXX_STANDARD 11)

add_executable(lab03_2 task2.cpp)
add_executable(lab03_4 task4.cpp)
add_executable(lab03_5 task5.cpp)
add_executable(lab03_6 task6.cpp)
add_executable(lab03_7 task7.cpp)
add_executable(lab03_t1a t1a.cpp)
add_executable(lab03_t1b t1b.cpp)

